Add integration test files

--- a/SW_Project03/SW_Project03.vcxproj
+++ b/SW_Project03/SW_Project03.vcxproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <ClCompile Include="1.c" />
     <ClCompile Include="motor_stub.c" />
+    <ClCompile Include="test_integration.c" />
     <ClCompile Include="test_main.c" />
     <ClCompile Include="test_system.c" />
     <ClCompile Include="test_unit.c" />
