--- a/SW_Project03/SW_Project03.vcxproj.filters
+++ b/SW_Project03/SW_Project03.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="test_unit.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="test_integration.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
